# Scotty3D

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Maekfile.js  README.md  build_win.bat  handin.tgz  model.dae  writeup-A1.txt  writeup-A2.txt  writeup-A3.txt  writeup-A4.txt  writeup.txt
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
assignments/: A0.md  A1.md  A2.md  A3.md  A4.md  writeup-A0.html  writeup-A1.html  writeup-A2.html  writeup-A3.html  writeup-A4.html
assignments/A2/: catmull.md  halfedge.md  linear.md  loop.md  remesh.md  simplify.md  triangulate.md
assignments/A3/: T1-camera-rays.md  T2-intersecting-objects.md  T3-bounding-volume-hierarchy.md  T4-path-tracing.md  T5-materials.md  T6-direct-lighting.md  T7-environment-lighting.md
assignments/A4/: T1-splines.md  T2-skeleton.md  T3-skinning.md  T4-particles.md
assignments/resources/: jquery.twentytwenty.js  offcanvas.css  twentytwenty.css
docs/: Gemfile  _config.yml  building.md  git.md  index.md  philosophy.md
docs/_data/: navigation.yml
docs/_site/: index.html  sitemap.xml
docs/animation/: generate_videos.md  overview.md  particles.md  skeleton_kinematics.md  skinning.md  splines.md
docs/guide/: animate.md  guide.md  layout.md  model.md  render.md  rig.md  simulate.md
docs/meshedit/: bevel.md  catmull.md  edge_flip.md  global.md  halfedge.md  linear.md  local.md  loop.md  overview.md  remesh.md  simplify.md  triangluate.md  triangulate.md
docs/pathtracer/: -273.149994 _ 17.67_(-273.149994 + 243.5) - Google Search.html  bounding_volume_hierarchy.md  camera_rays.md  dielectrics_and_transmission.md  environment_lighting.md  importance_sampling.md  intersecting_objects.md  materials.md  overview.md  path_tracing.md  ray_sphere_intersection.md  ray_triangle_intersection.md  shadow_rays.md  visualization_of_normals.md
media/: beast.dae  bunny.dae  cbox.dae  cbox_lambertian.dae  cow.dae  crazy_torus.dae  cube.dae  dodecahedron.dae  dof.dae  hex.dae  human.dae  particles.dae  peter.dae  sources.txt  teapot.dae  torus.dae
media/js3d/: A1-bunnies.s3d  A1-cubes.js3d  A1T1-junk.js3d  A1T4-blend-depth.js3d  A1T4-layers.js3d  A1T6-samplers.js3d  A1T7-supersampling.js3d  A2-blob.js3d  A2-cube-rule.js3d  A2-dodecahedron.js3d  A3-bokeh.js3d  A3-cbox-lambertian-spheres.js3d  A3-cbox-spheres.js3d  A3-cow-env-empty.js3d  A3-dof.js3d  A4-human.js3d  A4-particles.js3d  bunny.js3d  cbox.js3d  cbox_lambertian.js3d  cbox_mesh.js3d  cbox_mesh_lambertian.js3d  cow-env-empty.js3d  cow-simple.js3d  cow.js3d  dodecahedron-lit.js3d  dodecahedron.js3d  human.js3d  particles.js3d  uv-cube.js3d  uv-plane.js3d
media/s3d/: A1-cubes.s3d  A1T1-junk.s3d  A1T4-layers.s3d  A1T6-samplers.s3d  A2-cube-rule.s3d  A3-cbox-lambertian-spheres.s3d  A3-cbox-spheres.s3d  bunny.s3d  cbox.s3d  cbox_lambertian.s3d  cow-simple.s3d  cow.s3d  dodecahedron-lit.s3d  dodecahedron.s3d  human.s3d  particles.s3d  uv-cube.s3d  uv-plane.s3d
media/textures/: test-cube.blend
src/: app.cpp  app.h  main.cpp  test.cpp  test.h
src/geometry/: halfedge-global.cpp  halfedge-local.cpp  halfedge-utility.cpp  halfedge.cpp  halfedge.h  indexed.cpp  indexed.h  meshedit.cpp  spline.cpp  spline.h  spline.inl  util.cpp  util.h
src/gui/: animate.cpp  animate.h  layout.cpp  layout.h  manager.cpp  manager.h  model.cpp  model.h  modifiers.h  render.cpp  render.h  rig.cpp  rig.h  simulate.cpp  simulate.h  widgets.cpp  widgets.h
src/lib/: bbox.h  line.h  log.h  mat4.h  mathlib.h  plane.h  quat.h  ray.h  spectrum.h  vec2.h  vec3.h  vec4.h
src/pathtracer/: aggregate.h  aperture_shape.cpp  aperture_shape.h  bvh.cpp  bvh.h  instance.h  list.h  pathtracer.cpp  pathtracer.h  samplers.cpp  samplers.h  trace.h  tri_mesh.cpp  tri_mesh.h
src/platform/: gl.cpp  gl.h  icon.res  platform.cpp  platform.h  renderer.cpp  renderer.h
src/rasterizer/: framebuffer.cpp  framebuffer.h  pipeline.cpp  pipeline.h  programs.h  rasterizer.cpp  rasterizer.h  sample_pattern.cpp  sample_pattern.h
src/rays/: bsdf.h  bvh.h  env_light.h  light.cpp  light.h  list.h  object.h  pathtracer.cpp  pathtracer.h  samplers.h  shapes.h  trace.h  tri_mesh.h
src/scene/: animator.cpp  animator.h  camera.cpp  camera.h  delta_light.cpp  delta_light.h  env_light.cpp  env_light.h  instance.h  introspect.h  io.cpp  io.h  light.cpp  light.h  load-save-json.cpp  load-save.cpp  material.cpp  material.h  object.cpp  object.h  particles.cpp  particles.h  pose.cpp  pose.h  renderer.cpp  renderer.h  renderer_ideas.h  scene-step.cpp  scene.cpp  scene.h  shape.cpp  shape.h  skeleton.cpp  skeleton.h  texture.cpp  texture.h  transform.cpp  transform.h  undo.cpp  undo.h
src/student/: bbox.cpp  bsdf.cpp  bvh.cpp  bvh.inl  camera.cpp  debug.cpp  debug.h  env_light.cpp  meshedit.cpp  particles.cpp  pathtracer.cpp  samplers.cpp  shapes.cpp  skeleton.cpp  spline.cpp  spline.inl  tri_mesh.cpp
src/util/: camera.cpp  camera.h  hdr_image.cpp  hdr_image.h  rand.cpp  rand.h  thread_pool.cpp  thread_pool.h  timer.cpp  timer.h  to_json.cpp  to_json.h  viewer.cpp  viewer.h
tests/a0/: test.a0.task2.example.cpp  test.a0.task2.problems.cpp
tests/a1/: test.a1.task1.cpp  test.a1.task2.cpp  test.a1.task3.clip.cpp  test.a1.task3.raster.cpp  test.a1.task4.cpp  test.a1.task5.cpp  test.a1.task6.cpp  test.a1.task7.cpp
tests/a2/: test.a2.g1.cpp  test.a2.g2.cpp  test.a2.g3.cpp  test.a2.global.mix.cpp  test.a2.go1.cpp  test.a2.go2.cpp  test.a2.go3.cpp  test.a2.l1.cpp  test.a2.l2.cpp  test.a2.l3.cpp  test.a2.l4.cpp  test.a2.l5.cpp  test.a2.local.mix.cpp  test.a2.lx1.cpp  test.a2.lx2.cpp  test.a2.lx3.cpp  test.a2.lx4.cpp  test.a2.lx5.cpp  test.a2.lx6.cpp  test.a2.lx7.cpp  test.a2.lx8.cpp
tests/a3/: test.a3.task1.sample_ray.cpp  test.a3.task2.sphere.hit.cpp  test.a3.task2.triangle.hit.cpp  test.a3.task3.bbox.hit.cpp  test.a3.task3.bbox.triangle.cpp  test.a3.task3.bvh.build.cpp  test.a3.task3.bvh.fuzz.cpp  test.a3.task3.bvh.hit.cpp  test.a3.task4.bsdf.lambertian.cpp  test.a3.task5.bsdf.glass.cpp  test.a3.task5.bsdf.mirror.cpp  test.a3.task5.bsdf.refract.cpp  test.a3.task7.env_light.map.cpp
(+61 files in other folders)
